update environment configuration and README for consistency

--- a/env.yml
+++ b/env.yml
@@ -7,21 +7,20 @@ dependencies:
   - asgiref
   - bzip2
   - ca-certificates
-  - django=5.1.7
+  - django=5.1.*
   - expat
   - libcxx
   - libffi
   - ncurses
   - openssl
-  - pip=25.1
-  - python=3.11.13
+  - pip=25.*
+  - python=3.11.*
   - setuptools
-  - sqlite=3.50.2
-  - sqlparse=0.5.2
+  - sqlite
+  - sqlparse
   - time
   - tk
   - tzdata
   - wheel
   - xz
   - zlib
-
