feat: implement Celery task for long-running processes with logging  chore: enhance Django settings for Redis caching and Celery integration

--- a/env.yml
+++ b/env.yml
@@ -1,26 +1,17 @@
-name: test-task-django
+name: testdjango
 channels:
-  - defaults
   - conda-forge
   - bioconda
+  - defaults
 dependencies:
-  - asgiref
-  - bzip2
-  - ca-certificates
-  - django=5.1.*
-  - expat
-  - libcxx
-  - libffi
-  - ncurses
-  - openssl
-  - pip=25.*
-  - python=3.11.*
-  - setuptools
-  - sqlite
-  - sqlparse
-  - time
-  - tk
-  - tzdata
-  - wheel
-  - xz
-  - zlib
+  - python=3.12
+  - django=5.2
+  - celery=5.5.*
+  - redis-py
+  - python-dotenv
+  - django-redis
+  - pip
+  - pip:
+      - django
+      - celery
+      - django-redis
