fix: update Dockerfile and docker-compose for conda environment, adjust Redis service references in settings

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,6 @@
-name: testdjango
+# name: testdjango
+name: app_env
+prefix: /opt/conda/envs/app_env
 channels:
   - conda-forge
   - bioconda
@@ -12,6 +14,4 @@ dependencies:
   - django-redis
   - pip
   - pip:
-      - django
-      - celery
       - django-redis
