--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,28 @@
+version: "3.9"
+
 services:
-  django:
+  redis_server:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
+  django_app:
     build: .
-    container_name: django_app
-    env_file:
-      - .env
-    command: bash -c "conda run -n testdjango python manage.py migrate && conda run -n testdjango python manage.py runserver 0.0.0.0:8000"
-    volumes:
-      - .:/app
     ports:
       - "8000:8000"
     depends_on:
-      - redis
-   
+      - redis_server
 
-  celery:
+  celery_worker:
     build: .
-    container_name: celery_worker
-    command: bash -c "conda run -n testdjango celery -A testaskdjango worker --loglevel=INFO"
-    volumes:
-      - .:/app
+    command: /bin/bash -c "source /opt/conda/etc/profile.d/conda.sh && conda activate app_env && celery -A testaskdjango worker --loglevel=info"
     depends_on:
-      - redis
-    env_file:
-      - .env
+      - redis_server
+      - django_app
 
   celery_beat:
     build: .
-    container_name: celery_beat
-    command: bash -c "conda run -n testdjango celery -A testaskdjango beat --loglevel=INFO"
-    volumes:
-      - .:/app
+    command: /bin/bash -c "source /opt/conda/etc/profile.d/conda.sh && conda activate app_env && celery -A testaskdjango beat --loglevel=info"
     depends_on:
-      - redis
-    env_file:
-      - .env
-
-  redis:
-    image: redis:7
-    container_name: redis_server
-    ports:
-      - "6379:6379"
+      - redis_server
+      - django_app
